# project-semantic-search

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: fastapi_app.py  routes.py  schemas.py
data/raw/: Filament_v5_Verified_Reference.md  python-datascience-SKILL.md
migrations/: env.py
migrations/versions/: 0202f9c2094c_add_page_number_to_chunks.py
scripts/: ingest.py  search.py  test_rag_service.py
src/chunking/: __init__.py  text_chunker.py
src/cli/: app.py  entry.py
src/config/: settings.py
src/database/: __init__.py  database.py  models.py  repository.py
src/domain/: chunk.py  page.py
src/embeddings/: __init__.py  embedding_model.py
src/generation/: __init__.py  groq_generator.py  llm_service.py  prompt_builder.py
src/ingestion/: __init__.py  base_ingestor.py  csv_ingestor.py  document_loader.py  docx_ingestor.py  html_ingestor.py  ingest_pipeline.py  ingestor_factory.py  pdf_ingestor.py  text_ingestor.py
src/rag/: __init__.py  context_builder.py  rag_pipeline.py
src/retrieval/: __init__.py  retriever.py
src/services/: rag_service.py
src/utils/: logger.py  text_cleaner.py  text_normalizer.py
src/vectorstore/: __init__.py  faiss_store.py
tests/: test_api.py  test_connection.py  test_document_store.py  test_ingestion.py  test_rag.py  test_retriever.py
