[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "faiss-cpu",
    "psycopg2-binary",
    "groq",
    "numpy"
]

[project.scripts]
semantic-search = "src.cli.entry:main"

[tool.setuptools]
packages = ["src"]
